[gd_scene load_steps=4 format=3 uid="uid://d1hbosawlplqs"]

[ext_resource type="FontFile" uid="uid://b6y5a14m0e5if" path="res://outros_assets/Myfont-Regular.ttf" id="1_a8s5i"]
[ext_resource type="Script" path="res://selecao_dificuldade.gd" id="1_ip23p"]
[ext_resource type="PackedScene" uid="uid://cbvpibdtq2glc" path="res://bg.tscn" id="2_7q6ao"]

[node name="selecao_dificuldade" type="Node2D"]
script = ExtResource("1_ip23p")

[node name="facil" type="Button" parent="."]
offset_left = 120.0
offset_top = 242.0
offset_right = 395.0
offset_bottom = 365.0
theme_override_fonts/font = ExtResource("1_a8s5i")
theme_override_font_sizes/font_size = 40
text = "Facil"

[node name="Bg" parent="." instance=ExtResource("2_7q6ao")]

[node name="medio" type="Button" parent="."]
offset_left = 440.0
offset_top = 242.0
offset_right = 715.0
offset_bottom = 365.0
theme_override_fonts/font = ExtResource("1_a8s5i")
theme_override_font_sizes/font_size = 40
text = "Medio"

[node name="dificil" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 776.0
offset_top = 242.0
offset_right = 1051.0
offset_bottom = 365.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_a8s5i")
theme_override_font_sizes/font_size = 40
text = "Dificil
"

[node name="surpresa" type="Button" parent="."]
offset_left = 448.0
offset_top = 434.0
offset_right = 723.0
offset_bottom = 557.0
theme_override_fonts/font = ExtResource("1_a8s5i")
theme_override_font_sizes/font_size = 40
text = "Surpresa"

[node name="voltar" type="Button" parent="."]
offset_left = 13.0
offset_top = 11.0
offset_right = 105.0
offset_bottom = 70.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_a8s5i")
text = "Voltar"
metadata/_edit_lock_ = true

[node name="texto" type="Label" parent="."]
offset_left = 40.0
offset_top = 104.0
offset_right = 807.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(0.00392157, 0.00392157, 0.258824, 1)
theme_override_fonts/font = ExtResource("1_a8s5i")
theme_override_font_sizes/font_size = 60
text = "Selecione a dificuldade:"

[connection signal="pressed" from="facil" to="." method="_on_facil_pressed"]
[connection signal="pressed" from="medio" to="." method="_on_medio_pressed"]
[connection signal="pressed" from="dificil" to="." method="_on_dificil_pressed"]
[connection signal="pressed" from="surpresa" to="." method="_on_surpresa_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
